# ai-truffle-hog

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: test_repo.md
docs/change_notes/: 20241231_phase1_foundation_complete.md  20250101_phase8_orchestrator_cli.md  20251231_phase3_providers_complete.md
docs/internal/: 20251231_architecture_analysis.md  20251231_coding_tasks.md  20251231_master_plan.md  20251231_phase3_implementation_plan.md  20251231_project_setup_spec.md  20251231_provider_specification.md  20251231_scanner_foundation_plan.md
docs/research/: AI Provider API Key Scanning Research.md  AI-Truffle-Hog Project Research Plan.md  GitHub Repo Scanner Plan.md  Global-Scale GitHub Secret Scanning_ Serverless Ar....md  Stack Configuration Comparison for Workflows.md
scripts/: dev_setup.sh
src/ai_truffle_hog/: __init__.py  __main__.py
src/ai_truffle_hog/cli/: __init__.py  app.py
src/ai_truffle_hog/cli/commands/: __init__.py  scan.py
src/ai_truffle_hog/core/: __init__.py  models.py  orchestrator.py  scanner.py
src/ai_truffle_hog/fetcher/: __init__.py  file_walker.py  git.py
src/ai_truffle_hog/providers/: __init__.py  anthropic.py  base.py  cohere.py  google.py  groq.py  huggingface.py  langsmith.py  openai.py  registry.py  replicate.py
src/ai_truffle_hog/reporter/: __init__.py  console.py  json_reporter.py  log_handler.py  sarif.py
src/ai_truffle_hog/utils/: __init__.py  config.py  entropy.py  redaction.py
src/ai_truffle_hog/validator/: __init__.py  client.py  rate_limiter.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_config.py  test_entropy.py  test_file_walker.py  test_git_fetcher.py  test_models.py  test_orchestrator.py  test_providers.py  test_rate_limiter.py  test_redaction.py  test_reporters.py  test_scanner.py  test_validation_client.py
tests/unit/test_providers/: test_anthropic.py  test_cohere.py  test_google.py  test_groq.py  test_huggingface.py  test_langsmith.py  test_openai.py  test_registry_complete.py  test_replicate.py
